# homo3d

./: CMakeLists.txt  Framework.cu  cmdline.cpp  cmdline.h  data_process.ipynb  main.cpp
AutoDiff/: AutoDiff.h  TensorExpression.cu  TensorExpression.h
homogenization/: MG.cpp  homoExpression.h  homogenization.cpp  testAutoDiff.cu  utils.h
matlab/: matlab_utils.cpp  matlab_utils.h
optimization/: OCOptimizer.cu  OCOptimizer.h  mmaOpt.cpp  mmaOpt.cu  mmaOpt.h  mmaOptimizer.cu  mmaOptimizer.h
scripts/: DataTest.ipynb  ReadMe.md  data_process.ipynb
utils/: example.cu  output.h  readme.md  result.h  robust.h  robust_example.cu  tensor2js.h  tools.h
voxelIO/: openvdb_wrapper_t.h
